# diffused-texture-addon

./: .gitignore  Dockerfile  NOTICE  OLD_texturegen_panel.py  README.md  __init__,py  __init__.py  blender_manifest.toml  blender_operations.py  condition_setup.py  install_requirements.py  mock_context.py  mock_scene.py  object_ops.py  operators.py  panel.py  panel_backup.py  preferences.py  process_utils.py  properties.py  pyproject.toml  registration.py  render_setup.py  requirements-cuda118.txt  requirements-cuda129.txt  requirements-dev.txt  requirements.txt  scene_backup.py  texture_generation.py  utils.py
.github/actions/blender-addon-release-v4/: action.yml
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  test.yml
config/: config_parameters.py
diffusedtexture/: camera_parameters.py  condition_setup.py  diffusers_utils.py  first_pass.py  img_parallel.py  img_parallel_old.py  img_parasequential.py  img_sequential.py  img_sequential_old.py  latent_parallel.py  process_operations.py  process_utils.py  second_pass.py  third_pass.py  uv_pass.py
diffusedtexture/pipeline/: controlnet_config.py  pipeline_builder.py  pipeline_runner.py
documentation/: DOCUMENTATION.md  WORKFLOW.md
installer/: cuda.py  operators.py  paths.py
properties/: __init__.py  controlnet.py  ipadapter.py  lora.py  mesh_settings.py  prompts.py  stable_diffusion.py
scripts/: update_manifest.py
tests/: test_bpy.py  test_dependencies.py  test_diffusers.py  test_register.py
texturegen/: diffusers_utils.py  first_pass.py  process_utils.py  second_pass.py  third_pass.py  uv_pass.py
user_interface/: advanced_panel.py  ipadapter_panel.py  lora_panel.py  main_panel.py
