[project]
name = "diffused_texture_addon"
version = "0.1.0"
description = "A Blender Addon for Generating Diffuse Textures on Meshes with Stable Diffusion"
authors = [{ name = "Frederik Hasecke" }]
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "bpy>=4.2.0",
    "accelerate",
    "diffusers",
    "transformers",
    "peft",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "coverage",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
select = ["ALL"]
ignore = ["D100", "D103", "D104", "D400", "N801", "N999", "INP001", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
