[project]
name = "diffused_texture_addon"
version = "0.1.0"
description = "A Blender Addon for Generating Diffuse Textures on Meshes with Stable Diffusion"
authors = [{ name = "Frederik Hasecke" }]
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "bpy>=4.5.0",
    "diffusers",
    "transformers",
    "peft",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-mock",
  "coverage",
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    "scratchbook/"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TD002", "TD003", "D100", "D103", "D104", "D400", "N801", "N999", "INP001", "TID252", "RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ty.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"